# ros2_mecademic

meca_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
meca_moveit_config/config/: kinematics.yaml  meca_500_r3.srdf  moveit_controllers.yaml  ros2_controllers.yaml
meca_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ros2_mecademic_description/urdf/: meca_500_r3.urdf
ros2_mecademic_gui/: setup.cfg
ros2_mecademic_simulator/: setup.cfg
ros2_mecademic_state_publisher/: CMakeLists.txt
ros2_mecademic_utilities/: setup.cfg
